<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/icon_news" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/app_name"
                android:textSize="@dimen/size_20sp" />

            <TextView
                android:id="@+id/tv_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="@dimen/size_12sp"
                tools:text="当前版本：1.0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/summary"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:id="@+id/tv_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_github"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/github"
                    android:textSize="@dimen/size_14sp" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/advise"
                    android:textSize="@dimen/size_14sp" />

                <TextView
                    android:id="@+id/tv_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_download"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/downloadurl"
                    android:textSize="@dimen/size_14sp" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:drawableLeft="@drawable/ic_share"
                    android:drawablePadding="15dp"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:text="@string/share_app"
                    android:textSize="@dimen/size_14sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/colorLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/thanks"
                    android:textSize="@dimen/size_16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/about1"
                    android:textSize="@dimen/size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/about2"
                    android:textSize="@dimen/size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/about3"
                    android:textSize="@dimen/size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:singleLine="true"
                    android:text="@string/about4"
                    android:textSize="@dimen/size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/about5"
                    android:textSize="@dimen/size_12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/about6"
                    android:textSize="@dimen/size_12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>